2008-07-18  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Support for |idl_text| attribute, version 1 (no
	proper support for types, extended attributes, and exceptions yet).
	WebIDL parser, version 1 (no support for exceptions yet,
	no proper support for extended attributes yet).

2008-07-09  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm (parse_char_string): Support for basic attribute syntax.

2008-06-29  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Support for valuetype and const.

2008-06-29  Wakaba  <wakaba@suika.fam.cx>
	
	* WebIDL.pm: New module.

2008-06-15  Wakaba  <wakaba@suika.fam.cx>

	* Makefile (Entities.html): URI changed.

2008-06-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for ruby parsing (HTML5 revision 1704).

2008-06-01  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): A parse error was missing.

2008-06-01  Wakaba  <wakaba@suika.fam.cx>

	* mklinktypelist.pl: rel=contact is no longer part of the HTML5
	spec (commented out). (HTML5 revision 1711).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Drop support for UTF-32 (HTML5 revision 1701).

	* HTML.pm.src: UTF-16BE and UTF-16LE should be considered 
	as UTF-16 (HTML5 revision 1701).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for <noframes> in <head> (HTML5 revision
	1692).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The secondary insertion mode used when switching
	to foreign content is the "in body" insertion mode (HTML5 revision
	1696).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Don't raise parse error for <isindex/> (HTML5
	revision 1697).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for end-of-file token in foreign content
	insertion mode (HTML5 revision 1693).  Update SVG camelCase
	attribute list (HTML5 revision 1700).  <textarea> closes
	</select> (HTML5 revision 1699).  More start tags close in
	foreign content insertion mode (HTML5 revision 1698).
