@@ -1,3 +1,8 @@
+2008-07-19  Wakaba  <wakaba@suika.fam.cx>
+
+	* WebIDL.pm: Hierarchical scoped name support was broken.
+	Support for raises, setraises, and getraises syntaxes.
+
 2008-07-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* WebIDL.pm: Support for |idl_text| attribute, version 1 (no
